+++++++++++
Python News
+++++++++++

What's New in Python 3.3.4 release candidate 1?
===============================================

*Not yet released, see sections below for changes released in 3.3.3*

Core and Builtins
-----------------

- Issue #2382: SyntaxError cursor "^" is now written at correct position in most
  cases when multibyte characters are in line (before "^").  This still not
  works correctly with wide East Asian characters.

- Issue #18960: The first line of Python script could be executed twice when
  the source encoding was specified on the second line.  Now the source encoding
  declaration on the second line isn't effective if the first line contains
  anything except a comment.  'python -x' works now again with files with the
  source encoding declarations, and can be used to make Python batch files
  on Windows.

- Issue #19081: When a zipimport .zip file in sys.path being imported from
  is modified during the lifetime of the Python process after zipimport has
  already cached the zip's table of contents we detect this and recover
  rather than read bad data from the .zip (causing odd import errors).

- Issue #17432: Drop UCS2 from names of Unicode functions in python3.def.

- Issue #19969: PyBytes_FromFormatV() now raises an OverflowError if "%c"
  argument is not in range [0; 255].

- Issue #14432: Generator now clears the borrowed reference to the thread
  state. Fix a crash when a generator is created in a C thread that is
  destroyed while the generator is still used. The issue was that a generator
  contains a frame, and the frame kept a reference to the Python state of the
  destroyed C thread. The crash occurs when a trace function is setup.

- Issue #19932: Fix typo in import.h, missing whitespaces in function prototypes.

- Issue #19729: In str.format(), fix recursive expansion in format spec.

- Issue #19638: Fix possible crash / undefined behaviour from huge (more than 2
  billion characters) input strings in _Py_dg_strtod.
